<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.ElHaddadi.orderapp.ui.home.HomeFragment"
        android:label="@string/menu"
        tools:layout="@layout/menu_item" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.ElHaddadi.orderapp.ui.gallery.GalleryFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.ElHaddadi.orderapp.ui.slideshow.SlideshowFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_slideshow" />
</navigation>