<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editAddress"
                android:hint="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:textSize="34sp"
                android:textColor="@android:color/white"
                android:inputType="text"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_kharkiv"
                android:textSize="24sp" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editComment"
                android:hint="@string/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:inputType="textMultiLine"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"/>
            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/paymentSpinner"
                android:text="@string/payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
</androidx.cardview.widget.CardView>