<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/you_have_have_a_problem_with_something"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editComplaint"
            android:hint="@string/complaint_or_opinion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:inputType="textMultiLine"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            app:met_singleLineEllipsis="true"/>

        <Button
            android:id="@+id/send_btn"
            android:background="@color/colorPrimary"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:text="@string/contacts"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:text="Phone : +380955072544"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/wtv_png"
                android:contentDescription="TODO" />

        </LinearLayout>
        <TextView
            android:text="Email : elhdev.sup@gmail.com"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>